Updated latest shared/elements from gaia

--- a/elements/gaia_grid/locales/gaia_grid.en-US.properties
+++ b/elements/gaia_grid/locales/gaia_grid.en-US.properties
@@ -9,3 +9,6 @@ gaia-grid-resume-download-body=Do you want to download {{name}}?
 gaia-grid-resume-download-action=Download
 
 gaia-grid-cancel=Cancel
+
+# Hint that appears in edit mode for groups with no title set.
+gaia-grid-enter-group-name=Enter a group name
